# odyssey

./: .clang-format  .clang-uml  .gitignore  CMakeLists.txt  README.md
assets/: level3.txt
assets/levels/: level1.txt  level2.txt  level4.txt
config/: CameraConfig.h  ColorPalette.h  Config.h.in  HudConfig.h  PhysicsConfig.h  PlayerConfig.h  TransitionConfig.h  WindowConfig.h  WorldConfig.h
docs/: AABB.md  parallax.md
docs/diagrams/: odyssey.puml
include/: Camera.h  Config.h.in  Game.h  HUD.h  InputManager.h  Key.h  Level.h  LevelManager.h  ParallaxLayer.h  PathUtils.h  Physics.h  Platform.h  Player.h  Rect.h  Tile.h
src/: Camera.cpp  Game.cpp  HUD.cpp  InputManager.cpp  Key.cpp  Level.cpp  LevelManager.cpp  ParallaxLayer.cpp  Physics.cpp  Player.cpp  Rect.cpp  Tile.cpp  main.cpp
src/core/: Game.cpp  Game.h  GameState.h  HUD.cpp  HUD.h  main.cpp
src/entities/: Key.cpp  Key.h  Player.cpp  Player.h  Rect.cpp  Rect.h  Tile.cpp  Tile.h
src/render/: BackgroundRenderer.cpp  BackgroundRenderer.h  HudRenderer.cpp  HudRenderer.h  PlayerRenderer.cpp  PlayerRenderer.h  Renderer.cpp  Renderer.h  TransitionRenderer.cpp  TransitionRenderer.h  WorldRenderer.cpp  WorldRenderer.h
src/systems/: Camera.cpp  Camera.h  CollectibleSystem.cpp  CollectibleSystem.h  InputHandler.cpp  InputHandler.h  InputManager.cpp  InputManager.h  Physics.cpp  Physics.h  ProgressionSystem.cpp  ProgressionSystem.h  RespawnSystem.cpp  RespawnSystem.h  TransitionSystem.cpp  TransitionSystem.h
src/utils/: PathUtils.h  Platform.h
src/world/: BackgroundThemes.cpp  BackgroundThemes.h  Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  LevelManager.cpp  LevelManager.h  ParallaxLayer.cpp  ParallaxLayer.h
